# openvla-oft-dgx-spark

./: .dockerignore  .gitignore  Dockerfile  LIBERO.md  README.md  README_kenshu.md  RUNBOOK_DGX_SPARK.md  SETUP.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
experiments/robot/: openvla_utils.py
experiments/robot/libero/: libero_utils.py
prismatic/vla/datasets/rlds/oxe/: transforms.py
prismatic/vla/datasets/rlds/oxe/utils/: droid_utils.py
trossen_demo_scripts/: cartesian_position.py  gravity_compensation.py
